--- a/dicoding-first/Base.lproj/Main.storyboard
+++ b/dicoding-first/Base.lproj/Main.storyboard
@@ -1,24 +1,189 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="dicoding_first" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MyPicture" translatesAutoresizingMaskIntoConstraints="NO" id="BK1-9O-z84">
+                                <rect key="frame" x="110" y="36" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="6tM-Ne-iXa"/>
+                                    <constraint firstAttribute="height" constant="100" id="IyR-7e-qSk"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ricky Primayuda Putra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ckb-7D-lFn">
+                                <rect key="frame" x="44" y="144" width="232" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS Developer at Traveloka" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KfQ-Za-nmu">
+                                <rect key="frame" x="84" y="178.5" width="152.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4N1-5c-dh8">
+                                <rect key="frame" x="110" y="216" width="100" height="34.5"/>
+                                <color key="tintColor" name="MainColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Follow" cornerStyle="medium">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" name="DicodingColor"/>
+                                    </backgroundConfiguration>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="setFollowed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UGY-fA-SOW"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kx7-ZB-SiS">
+                                <rect key="frame" x="12" y="274.5" width="296" height="190"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PhW-Zd-zrH">
+                                        <rect key="frame" x="0.0" y="0.0" width="296" height="60"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoAcademy" translatesAutoresizingMaskIntoConstraints="NO" id="qxY-mM-y6p">
+                                                <rect key="frame" x="10" y="5" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="NZ4-5M-2Ch"/>
+                                                    <constraint firstAttribute="width" constant="50" id="hFM-Ly-ZuD"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Belajar 28 Kelas Akademi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ggu-RC-9oX">
+                                                <rect key="frame" x="70" y="5" width="216" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" name="MainColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <constraints>
+                                            <constraint firstItem="qxY-mM-y6p" firstAttribute="leading" secondItem="PhW-Zd-zrH" secondAttribute="leading" id="5ZD-YC-GSz"/>
+                                            <constraint firstItem="Ggu-RC-9oX" firstAttribute="leading" secondItem="qxY-mM-y6p" secondAttribute="trailing" id="dTT-TP-W02"/>
+                                            <constraint firstAttribute="bottom" secondItem="qxY-mM-y6p" secondAttribute="bottom" id="hpq-4T-N0n"/>
+                                            <constraint firstItem="qxY-mM-y6p" firstAttribute="top" secondItem="PhW-Zd-zrH" secondAttribute="top" id="jFF-iH-HZr"/>
+                                        </constraints>
+                                        <edgeInsets key="layoutMargins" top="5" left="10" bottom="5" right="10"/>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UzP-dX-nSA">
+                                        <rect key="frame" x="0.0" y="65" width="296" height="60"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoChallenge" translatesAutoresizingMaskIntoConstraints="NO" id="Tsl-iW-g99">
+                                                <rect key="frame" x="10" y="5" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="f0H-Rc-vw2"/>
+                                                    <constraint firstAttribute="width" constant="50" id="t0B-oy-JXq"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Memenangkan 2 Challenge" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlK-18-wNl">
+                                                <rect key="frame" x="70" y="5" width="216" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" name="MainColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                        <constraints>
+                                            <constraint firstItem="Tsl-iW-g99" firstAttribute="top" secondItem="UzP-dX-nSA" secondAttribute="top" id="1qk-JF-LlP"/>
+                                            <constraint firstItem="hlK-18-wNl" firstAttribute="leading" secondItem="Tsl-iW-g99" secondAttribute="trailing" id="IdH-fq-VH8"/>
+                                            <constraint firstAttribute="bottom" secondItem="Tsl-iW-g99" secondAttribute="bottom" id="Vpa-JY-7Dt"/>
+                                            <constraint firstItem="Tsl-iW-g99" firstAttribute="leading" secondItem="UzP-dX-nSA" secondAttribute="leading" id="bSV-F0-D2Q"/>
+                                        </constraints>
+                                        <edgeInsets key="layoutMargins" top="5" left="10" bottom="5" right="10"/>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Kk1-Md-Jq0">
+                                        <rect key="frame" x="0.0" y="130" width="296" height="60"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoEvent" translatesAutoresizingMaskIntoConstraints="NO" id="ENt-vh-mOz">
+                                                <rect key="frame" x="10" y="5" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="Vsn-gT-Qwp"/>
+                                                    <constraint firstAttribute="width" constant="50" id="vks-IP-A7x"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Menghadiri 8 Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ih-FZ-Uoe">
+                                                <rect key="frame" x="70" y="5" width="216" height="50"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" name="MainColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="ENt-vh-mOz" secondAttribute="bottom" id="65q-Qm-5qa"/>
+                                            <constraint firstItem="4ih-FZ-Uoe" firstAttribute="leading" secondItem="ENt-vh-mOz" secondAttribute="trailing" id="Bss-Td-F78"/>
+                                            <constraint firstItem="ENt-vh-mOz" firstAttribute="top" secondItem="Kk1-Md-Jq0" secondAttribute="top" id="cWw-Ph-COZ"/>
+                                            <constraint firstItem="ENt-vh-mOz" firstAttribute="leading" secondItem="Kk1-Md-Jq0" secondAttribute="leading" id="wfD-hz-82y"/>
+                                        </constraints>
+                                        <edgeInsets key="layoutMargins" top="5" left="10" bottom="5" right="10"/>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4N1-5c-dh8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="4Rx-EX-QRF"/>
+                            <constraint firstItem="BK1-9O-z84" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="8Hh-pP-luD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kx7-ZB-SiS" secondAttribute="trailing" constant="12" id="A5z-QT-NEr"/>
+                            <constraint firstItem="BK1-9O-z84" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="BCe-s9-nHe"/>
+                            <constraint firstItem="4N1-5c-dh8" firstAttribute="width" secondItem="BK1-9O-z84" secondAttribute="width" id="Jcr-ti-lXI"/>
+                            <constraint firstItem="KfQ-Za-nmu" firstAttribute="top" secondItem="Ckb-7D-lFn" secondAttribute="bottom" constant="8" symbolic="YES" id="Lnf-yd-F7c"/>
+                            <constraint firstItem="4N1-5c-dh8" firstAttribute="top" secondItem="KfQ-Za-nmu" secondAttribute="bottom" constant="23" id="VsZ-4y-dnB"/>
+                            <constraint firstItem="kx7-ZB-SiS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="XS7-El-jG9"/>
+                            <constraint firstItem="Ckb-7D-lFn" firstAttribute="top" secondItem="BK1-9O-z84" secondAttribute="bottom" constant="8" symbolic="YES" id="Zb4-MM-vTr"/>
+                            <constraint firstItem="kx7-ZB-SiS" firstAttribute="top" secondItem="4N1-5c-dh8" secondAttribute="bottom" constant="24" id="cQa-lG-xcs"/>
+                            <constraint firstItem="BK1-9O-z84" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d3f-N4-9JP"/>
+                            <constraint firstItem="Ckb-7D-lFn" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="oUL-V7-AAc"/>
+                            <constraint firstItem="KfQ-Za-nmu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="rIX-bp-CtE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kx7-ZB-SiS" secondAttribute="bottom" constant="12" id="ytY-PI-9Od"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="followedButton" destination="4N1-5c-dh8" id="Zgg-kc-q5T"/>
+                        <outlet property="profileImageView" destination="BK1-9O-z84" id="72b-gN-ZUP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="129" y="-27"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LogoAcademy" width="170.5" height="170.5"/>
+        <image name="LogoChallenge" width="170.5" height="170.5"/>
+        <image name="LogoEvent" width="170.5" height="170.5"/>
+        <image name="MyPicture" width="133" height="133"/>
+        <namedColor name="DicodingColor">
+            <color red="0.15686274509803921" green="0.23137254901960785" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="MainColor">
+            <color red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
